# olivia-banks.github.io

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  mirror.yml
builder/: __main__.py
content/: index.md
content/.obsidian/: types.json  workspace.json
content/blog/: index.md
content/blog/posts/: Automating ANTLR4 Integration in CMake for C++ Language Tools.md  Building a Tool to Read Firefox Memory Core Snapshots.md  Recovering images from a forgotten 1980s format (FaceSaver, 1987).md  Working with Berkeley Sprite’s Homegrown CVS Wrapper (SCVS, 1992).md
content/files/: pgp.txt
content/js/: page.js
content/style/: article.css  highlight.css  page.css
templates/: base.html
